// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer default 1`] = `
<RCTScrollView
  style={
    Array [
      Object {},
      undefined,
    ]
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "alignItems": "stretch",
              "alignSelf": "stretch",
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Array [
              Object {},
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "borderColor": "#007ac9",
                  "borderStyle": "solid",
                  "borderTopWidth": 4,
                  "width": "100%",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#ddd",
                    "borderStyle": "solid",
                    "borderTopWidth": 0,
                    "paddingVertical": 43.75,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                      "fontSize": 14,
                    },
                    Array [
                      Object {
                        "fontSize": 34.65,
                        "fontWeight": "500",
                        "letterSpacing": -0.4,
                      },
                      Array [
                        Object {
                          "marginBottom": 35,
                          "textAlign": "center",
                        },
                        undefined,
                      ],
                    ],
                  ],
                ]
              }
            >
              Ota HSL -tunnus käyttöön
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Lataa matkakorttia verkossa
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Hyödynnä asiakasetuja
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Tallenna suosikki linjat, reitit ja paikat
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Ota kaupunkipyörät käyttöön
                </Text>
              </View>
            </View>
            <View
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "backgroundColor": "#007ac9",
                      "borderColor": "#007ac9",
                      "borderRadius": 35,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "height": 70,
                    },
                    Array [
                      Object {},
                      Array [
                        Object {},
                        Array [
                          Object {
                            "marginTop": 43.75,
                            "paddingHorizontal": 57.75,
                          },
                          undefined,
                        ],
                      ],
                    ],
                  ],
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 14,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                          "fontSize": 26.25,
                          "fontWeight": "500",
                          "textAlign": "center",
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                Luo tunnus
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#ddd",
                    "borderStyle": "solid",
                    "borderTopWidth": 2,
                    "paddingVertical": 43.75,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                      "fontSize": 14,
                    },
                    Array [
                      Object {
                        "fontSize": 34.65,
                        "fontWeight": "500",
                        "letterSpacing": -0.4,
                      },
                      Array [
                        Object {
                          "marginBottom": 35,
                          "textAlign": "center",
                        },
                        undefined,
                      ],
                    ],
                  ],
                ]
              }
            >
              Tykkää, seuraa ja keskustele
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            >
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="36"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 17 33"
                    width="18"
                  >
                    <Path
                      d="M16.7982286,11.9856261 L11.034563,11.9856261 L11.034563,8.26958518 C11.034563,6.58443921 11.5045179,5.43616736 13.920705,5.43616736 L17,5.43464647 L17,0.229147407 C16.4681955,0.158172546 14.6405928,0 12.5103331,0 C8.06629291,0 5.02603406,2.71276056 5.02603406,7.69367489 L5.02603406,11.9856261 L0,11.9856261 L0,17.8050577 L5.02603406,17.8050577 L5.02603406,32.7381684 L11.034563,32.7381684 L11.034563,17.8050577 L16.047416,17.8050577 L16.7982286,11.9856261 Z"
                      fill="#007ac9"
                    />
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="27"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 37 30"
                    width="36"
                  >
                    <Path
                      d="M32.378152,4.71583229 C33.932806,3.78362439 35.1287498,2.30933321 35.6890973,0.550119553 C34.2359927,1.41292326 32.6250848,2.04048328 30.9089748,2.3787374 C29.5347718,0.91394364 27.576843,0 25.4114322,0 C21.2530251,0 17.8807119,3.37158265 17.8807119,7.52998969 C17.8807119,8.12102119 17.9479244,8.69451899 18.0750436,9.24536912 C11.8177077,8.93268496 6.26975565,5.93515438 2.55480488,1.37712531 C1.90751946,2.49124525 1.5356591,3.78362439 1.5356591,5.16440255 C1.5356591,7.77546136 2.86456676,10.0818723 4.88459407,11.4312359 C3.65066057,11.3932463 2.48978411,11.0528004 1.47429118,10.4895306 L1.47429118,10.5845048 C1.47429118,14.232243 4.07073858,17.2757996 7.51391714,17.9676498 C6.88343483,18.1393338 6.21642401,18.2335774 5.52968778,18.2335774 C5.04605014,18.2335774 4.57264048,18.1846292 4.11384224,18.0962302 C5.0716201,21.0886468 7.85217126,23.2642856 11.147044,23.3271147 C8.57178316,25.3464114 5.32512805,26.5503915 1.79428104,26.5503915 C1.18790756,26.5503915 0.588839787,26.513863 0,26.4451894 C3.33213185,28.5799162 7.29036258,29.827 11.5444743,29.827 C25.394629,29.827 32.968453,18.3548521 32.968453,8.40302138 C32.968453,8.07718696 32.9596861,7.75281368 32.9472664,7.42697925 C34.415713,6.36765209 35.691289,5.04093615 36.7031291,3.53011644 C35.3523044,4.12991479 33.9006609,4.53465082 32.378152,4.71583229 Z"
                      fill="#007ac9"
                    />
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="30"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 30 30"
                    width="30"
                  >
                    <Path
                      d="M3.85199662,0 L26.1498167,0 C28.2683241,0 30,1.73288472 30,3.85139219 L30,26.1492122 C30,28.2671153 28.2683241,29.9981867 26.1498167,29.9981867 L3.85199662,29.9981867 C1.73348914,29.9981867 0,28.2671153 0,26.1492122 L0,3.85139219 C0,1.73288472 1.73348914,0 3.85199662,0 Z M21.854777,3.33219164 C21.1107305,3.33219164 20.5038885,3.94145142 20.5038885,4.684289 L20.5038885,7.91614619 C20.5038885,8.65958819 21.1107305,9.26763912 21.854777,9.26763912 L25.2455978,9.26763912 C25.9878309,9.26763912 26.5958819,8.65958819 26.5958819,7.91614619 L26.5958819,4.684289 C26.5958819,3.94145142 25.9878309,3.33219164 25.2455978,3.33219164 L21.854777,3.33219164 Z M26.6085748,12.6862634 L23.9690535,12.6862634 C24.2198896,13.5034452 24.3546762,14.3659588 24.3546762,15.2623202 C24.3546762,20.2506346 20.1787081,24.2960471 15.0284079,24.2960471 C9.8793166,24.2960471 5.70274409,20.2506346 5.70274409,15.2623202 C5.70274409,14.3659588 5.839344,13.5034452 6.08836685,12.6862634 L3.33521376,12.6862634 L3.33521376,25.359834 C3.33521376,26.0162389 3.87073377,26.5499456 4.52653423,26.5499456 L25.4172543,26.5499456 C26.0736592,26.5499456 26.6085748,26.0162389 26.6085748,25.359834 L26.6085748,12.6862634 Z M15.0284079,9.09719144 C11.7022605,9.09719144 9.00411009,11.7101181 9.00411009,14.935931 C9.00411009,18.1587218 11.7022605,20.7734617 15.0284079,20.7734617 C18.3563686,20.7734617 21.0539147,18.1587218 21.0539147,14.935931 C21.0539147,11.7101181 18.3563686,9.09719144 15.0284079,9.09719144 L15.0284079,9.09719144 Z"
                      fill="#007ac9"
                    />
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="30"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 34 34"
                    width="36"
                  >
                    <G
                      fill="#007ac9"
                    >
                      <Path
                        d="M0.550538462,33.5897404 L7.50288462,33.5897404 L7.50288462,11.2556635 L0.550538462,11.2556635 L0.550538462,33.5897404 Z M4.029,0.152701916 C6.25207692,0.152701916 8.05407692,1.9573173 8.05407692,4.17647115 C8.05407692,6.39824038 6.25207692,8.20285576 4.029,8.20285576 C1.79873077,8.20285576 0,6.39824038 0,4.17647115 C0,1.9573173 1.79873077,0.152701916 4.029,0.152701916 L4.029,0.152701916 Z"
                      />
                      <Path
                        d="M11.8614231,11.2556635 L18.5188846,11.2556635 L18.5188846,14.3078173 L18.6136923,14.3078173 C19.5395385,12.5509327 21.8070769,10.7005481 25.1861538,10.7005481 C32.2136923,10.7005481 33.5135385,15.3238942 33.5135385,21.3392788 L33.5135385,33.5897404 L26.5742692,33.5897404 L26.5742692,22.7313173 C26.5742692,20.1388173 26.5232692,16.8068173 22.9643846,16.8068173 C19.3492692,16.8068173 18.7987308,19.6281635 18.7987308,22.5397404 L18.7987308,33.5897404 L11.8614231,33.5897404 L11.8614231,11.2556635"
                      />
                    </G>
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="34"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 30 36"
                    width="34"
                  >
                    <G
                      fill="#007ac9"
                    >
                      <Path
                        d="M11.6547059,0 L9.63529412,0 L8.27352941,5.25304918 L6.85647059,0 L4.75470588,0 C5.17529412,1.2387541 5.61411765,2.48577049 6.03470588,3.72688525 C6.67470588,5.59239344 7.07470588,6.99816393 7.25529412,7.95895082 L7.25529412,13.3772459 L9.25235294,13.3772459 L9.25235294,7.95895082 L11.6547059,0 Z M16.9917647,10.1496393 L16.9917647,6.65704918 C16.9917647,5.59239344 16.8094118,4.81396721 16.4317647,4.30878689 C15.9329412,3.62832787 15.2329412,3.28721311 14.3311765,3.28721311 C13.4347059,3.28721311 12.7323529,3.62832787 12.2347059,4.30878689 C11.8511765,4.81396721 11.6705882,5.59239344 11.6705882,6.65704918 L11.6705882,10.1496393 C11.6705882,11.2095738 11.8511765,11.9944918 12.2347059,12.4949508 C12.7323529,13.1742295 13.4347059,13.5153443 14.3311765,13.5153443 C15.2329412,13.5153443 15.9329412,13.1742295 16.4317647,12.4949508 C16.8094118,11.9944918 16.9917647,11.2095738 16.9917647,10.1496393 Z M15.19,10.4895738 C15.19,11.412 14.9117647,11.8735082 14.3311765,11.8735082 C13.75,11.8735082 13.4711765,11.412 13.4711765,10.4895738 L13.4711765,6.29527869 C13.4711765,5.37285246 13.75,4.91370492 14.3311765,4.91370492 C14.9117647,4.91370492 15.19,5.37285246 15.19,6.29527869 L15.19,10.4895738 Z M23.65,13.3772459 L23.65,3.40819672 L21.8494118,3.40819672 L21.8494118,11.0278033 C21.4494118,11.5937705 21.0711765,11.8735082 20.7117647,11.8735082 C20.4694118,11.8735082 20.3288235,11.7306885 20.29,11.4503607 C20.2676471,11.3919344 20.2676471,11.1712131 20.2676471,10.7474754 L20.2676471,3.40819672 L18.4723529,3.40819672 L18.4723529,11.2910164 C18.4723529,11.9944918 18.5335294,12.4719344 18.6329412,12.7735082 C18.8117647,13.2786885 19.2117647,13.5153443 19.7923529,13.5153443 C20.4488235,13.5153443 21.1317647,13.114623 21.8494118,12.2895738 L21.8494118,13.3772459 L23.65,13.3772459 L23.65,13.3772459 Z"
                      />
                      <Path
                        d="M29.4829412,25.4767869 C29.4829412,27.7825574 29.4811765,30.229377 28.9658824,32.4690492 C28.6058824,34.0412459 27.3235294,35.200918 25.7794118,35.3750164 C22.1235294,35.7845902 18.4223529,35.7869508 14.7394118,35.7845902 C11.0552941,35.7869508 7.35529412,35.7845902 3.69941176,35.3750164 C2.15529412,35.200918 0.872941176,34.0412459 0.513529412,32.4690492 C0,30.229377 0,27.7825574 0,25.4767869 C0,23.1680656 0.00529411765,20.7259672 0.519411765,18.4833443 C0.879411765,16.9117377 2.16117647,15.7514754 3.70529412,15.5785574 C7.36176471,15.1678033 11.0617647,15.1672131 14.7452941,15.1678033 C18.4282353,15.1672131 22.1294118,15.1678033 25.7852941,15.5785574 C27.33,15.7514754 28.6123529,16.9117377 28.9717647,18.4833443 C29.4847059,20.7259672 29.4829412,23.1680656 29.4829412,25.4767869"
                      />
                      <Path
                        d="M8.40941176,20.5005246 L8.40941176,18.6356066 L2.19647059,18.6356066 L2.19647059,20.5005246 L4.29294118,20.5005246 L4.29294118,31.8759344 L6.27411765,31.8759344 L6.27411765,20.5005246 L8.40941176,20.5005246 Z M12.0088235,31.8759344 L12.0088235,30.8006557 C11.3017647,31.615082 10.6288235,32.0122623 9.97352941,32.0122623 C9.39882353,32.0122623 9.00352941,31.7785574 8.82588235,31.2780984 C8.72764706,30.9782951 8.66823529,30.5085246 8.66823529,29.811541 L8.66823529,22.0101639 L10.4494118,22.0101639 L10.4494118,29.2739016 C10.4494118,29.6917377 10.4494118,29.9112787 10.4658824,29.9691148 C10.5094118,30.2459016 10.6441176,30.3863607 10.8823529,30.3863607 C11.24,30.3863607 11.6152941,30.1095738 12.0088235,29.5506885 L12.0088235,22.0101639 L13.7929412,22.0101639 L13.7929412,31.8759344 L12.0088235,31.8759344 Z M18.78,29.0567213 C18.78,29.9478689 18.5182353,30.3863607 18.0047059,30.3863607 C17.7117647,30.3863607 17.4141176,30.2459016 17.1164706,29.9478689 L17.1164706,23.9340984 C17.4141176,23.6401967 17.7117647,23.4991475 18.0047059,23.4991475 C18.5182353,23.4991475 18.78,23.9565246 18.78,24.8459016 L18.78,29.0567213 Z M20.5611765,28.9162623 L20.5611765,24.9863607 C20.5611765,24.0539016 20.5,23.4 20.3811765,23.0028197 C20.1435294,22.2645246 19.6676471,21.8903607 18.9570588,21.8903607 C18.3029412,21.8903607 17.6923529,22.2503607 17.1164706,22.9597377 L17.1164706,18.6356066 L15.3352941,18.6356066 L15.3352941,31.8759344 L17.1164706,31.8759344 L17.1164706,30.920459 C17.7117647,31.6587541 18.3229412,32.0122623 18.9570588,32.0122623 C19.6676471,32.0122623 20.1435294,31.6375082 20.3811765,30.9033443 C20.5,30.4860984 20.5611765,29.8280656 20.5611765,28.9162623 Z M25.5041176,25.7807213 L23.7235294,25.7807213 L23.7235294,24.868918 C23.7235294,23.9565246 24.0211765,23.4991475 24.6170588,23.4991475 C25.2058824,23.4991475 25.5041176,23.9565246 25.5041176,24.868918 L25.5041176,25.7807213 Z M27.2864706,28.7197377 L27.2864706,28.4594754 L25.4670588,28.4594754 C25.4670588,29.1765246 25.4458824,29.5713443 25.4294118,29.6687213 C25.3270588,30.1467541 25.0705882,30.3863607 24.6323529,30.3863607 C24.0211765,30.3863607 23.7235294,29.9313443 23.7235294,29.0177705 L23.7235294,27.2697049 L27.2864706,27.2697049 L27.2864706,25.2265574 C27.2864706,24.1713443 27.1070588,23.4 26.7341176,22.9019016 C26.2352941,22.2255738 25.5258824,21.8903607 24.6323529,21.8903607 C23.7235294,21.8903607 23.0123529,22.2255738 22.4988235,22.9019016 C22.1194118,23.4 21.9482353,24.1713443 21.9482353,25.2265574 L21.9482353,28.6825574 C21.9482353,29.728918 22.1423529,30.5085246 22.5205882,31.0007213 C23.0347059,31.6752787 23.7435294,32.0122623 24.6776471,32.0122623 C25.6076471,32.0122623 26.3382353,31.6587541 26.8323529,30.9428852 C27.0470588,30.6265574 27.1870588,30.2665574 27.2470588,29.8717377 C27.2641176,29.6917377 27.2864706,29.2945574 27.2864706,28.7197377 L27.2864706,28.7197377 Z"
                        fill="#FFFFFF"
                      />
                    </G>
                  </Svg>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#ddd",
                    "borderStyle": "solid",
                    "borderTopWidth": 2,
                    "paddingVertical": 43.75,
                  },
                  undefined,
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Yhteystiedot
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Tietosuojalauseke
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Rekisteriseloste
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Tietoa sivustosta
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#007ac9",
                      "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                      "fontSize": 21,
                      "marginTop": 43.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              © Copyright HSL
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Footer sub site 1`] = `
<RCTScrollView
  style={
    Array [
      Object {},
      undefined,
    ]
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "alignItems": "stretch",
              "alignSelf": "stretch",
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Array [
              Object {},
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "alignItems": "stretch",
                  "backgroundColor": "#f0f0f0",
                  "borderColor": "#007ac9",
                  "borderStyle": "solid",
                  "borderTopWidth": 4,
                  "width": "100%",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#ddd",
                    "borderStyle": "solid",
                    "borderTopWidth": 0,
                    "paddingVertical": 43.75,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                      "fontSize": 14,
                    },
                    Array [
                      Object {
                        "fontSize": 34.65,
                        "fontWeight": "500",
                        "letterSpacing": -0.4,
                      },
                      Array [
                        Object {
                          "marginBottom": 35,
                          "textAlign": "center",
                        },
                        undefined,
                      ],
                    ],
                  ],
                ]
              }
            >
              Ota HSL -tunnus käyttöön
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Lataa matkakorttia verkossa
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Hyödynnä asiakasetuja
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Tallenna suosikki linjat, reitit ja paikat
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "width": "100%",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "borderRadius": 875,
                          "height": 10.71875,
                          "marginRight": 30.625,
                          "marginVertical": 6.890625,
                          "width": 10.71875,
                        },
                        undefined,
                      ],
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                          "fontSize": 14,
                        },
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontSize": 24.5,
                            "fontWeight": "300",
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Ota kaupunkipyörät käyttöön
                </Text>
              </View>
            </View>
            <View
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "backgroundColor": "#007ac9",
                      "borderColor": "#007ac9",
                      "borderRadius": 35,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "height": 70,
                    },
                    Array [
                      Object {},
                      Array [
                        Object {},
                        Array [
                          Object {
                            "marginTop": 43.75,
                            "paddingHorizontal": 57.75,
                          },
                          undefined,
                        ],
                      ],
                    ],
                  ],
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 14,
                      },
                      Array [
                        Object {
                          "color": "#ffffff",
                          "fontSize": 26.25,
                          "fontWeight": "500",
                          "textAlign": "center",
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                Luo tunnus
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#ddd",
                    "borderStyle": "solid",
                    "borderTopWidth": 2,
                    "paddingVertical": 43.75,
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                      "fontSize": 14,
                    },
                    Array [
                      Object {
                        "fontSize": 34.65,
                        "fontWeight": "500",
                        "letterSpacing": -0.4,
                      },
                      Array [
                        Object {
                          "marginBottom": 35,
                          "textAlign": "center",
                        },
                        undefined,
                      ],
                    ],
                  ],
                ]
              }
            >
              Tykkää, seuraa ja keskustele
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            >
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#f0f0f0",
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="36"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 17 33"
                    width="18"
                  >
                    <Path
                      d="M16.7982286,11.9856261 L11.034563,11.9856261 L11.034563,8.26958518 C11.034563,6.58443921 11.5045179,5.43616736 13.920705,5.43616736 L17,5.43464647 L17,0.229147407 C16.4681955,0.158172546 14.6405928,0 12.5103331,0 C8.06629291,0 5.02603406,2.71276056 5.02603406,7.69367489 L5.02603406,11.9856261 L0,11.9856261 L0,17.8050577 L5.02603406,17.8050577 L5.02603406,32.7381684 L11.034563,32.7381684 L11.034563,17.8050577 L16.047416,17.8050577 L16.7982286,11.9856261 Z"
                      fill="#007ac9"
                    />
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#f0f0f0",
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="27"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 37 30"
                    width="36"
                  >
                    <Path
                      d="M32.378152,4.71583229 C33.932806,3.78362439 35.1287498,2.30933321 35.6890973,0.550119553 C34.2359927,1.41292326 32.6250848,2.04048328 30.9089748,2.3787374 C29.5347718,0.91394364 27.576843,0 25.4114322,0 C21.2530251,0 17.8807119,3.37158265 17.8807119,7.52998969 C17.8807119,8.12102119 17.9479244,8.69451899 18.0750436,9.24536912 C11.8177077,8.93268496 6.26975565,5.93515438 2.55480488,1.37712531 C1.90751946,2.49124525 1.5356591,3.78362439 1.5356591,5.16440255 C1.5356591,7.77546136 2.86456676,10.0818723 4.88459407,11.4312359 C3.65066057,11.3932463 2.48978411,11.0528004 1.47429118,10.4895306 L1.47429118,10.5845048 C1.47429118,14.232243 4.07073858,17.2757996 7.51391714,17.9676498 C6.88343483,18.1393338 6.21642401,18.2335774 5.52968778,18.2335774 C5.04605014,18.2335774 4.57264048,18.1846292 4.11384224,18.0962302 C5.0716201,21.0886468 7.85217126,23.2642856 11.147044,23.3271147 C8.57178316,25.3464114 5.32512805,26.5503915 1.79428104,26.5503915 C1.18790756,26.5503915 0.588839787,26.513863 0,26.4451894 C3.33213185,28.5799162 7.29036258,29.827 11.5444743,29.827 C25.394629,29.827 32.968453,18.3548521 32.968453,8.40302138 C32.968453,8.07718696 32.9596861,7.75281368 32.9472664,7.42697925 C34.415713,6.36765209 35.691289,5.04093615 36.7031291,3.53011644 C35.3523044,4.12991479 33.9006609,4.53465082 32.378152,4.71583229 Z"
                      fill="#007ac9"
                    />
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#f0f0f0",
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="30"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 30 30"
                    width="30"
                  >
                    <Path
                      d="M3.85199662,0 L26.1498167,0 C28.2683241,0 30,1.73288472 30,3.85139219 L30,26.1492122 C30,28.2671153 28.2683241,29.9981867 26.1498167,29.9981867 L3.85199662,29.9981867 C1.73348914,29.9981867 0,28.2671153 0,26.1492122 L0,3.85139219 C0,1.73288472 1.73348914,0 3.85199662,0 Z M21.854777,3.33219164 C21.1107305,3.33219164 20.5038885,3.94145142 20.5038885,4.684289 L20.5038885,7.91614619 C20.5038885,8.65958819 21.1107305,9.26763912 21.854777,9.26763912 L25.2455978,9.26763912 C25.9878309,9.26763912 26.5958819,8.65958819 26.5958819,7.91614619 L26.5958819,4.684289 C26.5958819,3.94145142 25.9878309,3.33219164 25.2455978,3.33219164 L21.854777,3.33219164 Z M26.6085748,12.6862634 L23.9690535,12.6862634 C24.2198896,13.5034452 24.3546762,14.3659588 24.3546762,15.2623202 C24.3546762,20.2506346 20.1787081,24.2960471 15.0284079,24.2960471 C9.8793166,24.2960471 5.70274409,20.2506346 5.70274409,15.2623202 C5.70274409,14.3659588 5.839344,13.5034452 6.08836685,12.6862634 L3.33521376,12.6862634 L3.33521376,25.359834 C3.33521376,26.0162389 3.87073377,26.5499456 4.52653423,26.5499456 L25.4172543,26.5499456 C26.0736592,26.5499456 26.6085748,26.0162389 26.6085748,25.359834 L26.6085748,12.6862634 Z M15.0284079,9.09719144 C11.7022605,9.09719144 9.00411009,11.7101181 9.00411009,14.935931 C9.00411009,18.1587218 11.7022605,20.7734617 15.0284079,20.7734617 C18.3563686,20.7734617 21.0539147,18.1587218 21.0539147,14.935931 C21.0539147,11.7101181 18.3563686,9.09719144 15.0284079,9.09719144 L15.0284079,9.09719144 Z"
                      fill="#007ac9"
                    />
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#f0f0f0",
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="30"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 34 34"
                    width="36"
                  >
                    <G
                      fill="#007ac9"
                    >
                      <Path
                        d="M0.550538462,33.5897404 L7.50288462,33.5897404 L7.50288462,11.2556635 L0.550538462,11.2556635 L0.550538462,33.5897404 Z M4.029,0.152701916 C6.25207692,0.152701916 8.05407692,1.9573173 8.05407692,4.17647115 C8.05407692,6.39824038 6.25207692,8.20285576 4.029,8.20285576 C1.79873077,8.20285576 0,6.39824038 0,4.17647115 C0,1.9573173 1.79873077,0.152701916 4.029,0.152701916 L4.029,0.152701916 Z"
                      />
                      <Path
                        d="M11.8614231,11.2556635 L18.5188846,11.2556635 L18.5188846,14.3078173 L18.6136923,14.3078173 C19.5395385,12.5509327 21.8070769,10.7005481 25.1861538,10.7005481 C32.2136923,10.7005481 33.5135385,15.3238942 33.5135385,21.3392788 L33.5135385,33.5897404 L26.5742692,33.5897404 L26.5742692,22.7313173 C26.5742692,20.1388173 26.5232692,16.8068173 22.9643846,16.8068173 C19.3492692,16.8068173 18.7987308,19.6281635 18.7987308,22.5397404 L18.7987308,33.5897404 L11.8614231,33.5897404 L11.8614231,11.2556635"
                      />
                    </G>
                  </Svg>
                </View>
              </View>
              <View
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#fff",
                        "borderColor": "#b7b7b7",
                        "borderRadius": 35,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 39.375,
                      },
                      Array [
                        Object {},
                        Array [
                          Object {},
                          Array [
                            Object {
                              "height": 70,
                              "width": 70,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#f0f0f0",
                                "marginHorizontal": 8.75,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ],
                    ],
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Array [
                        Object {
                          "height": 31.5,
                          "width": 31.5,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <Svg
                    height="34"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 30 36"
                    width="34"
                  >
                    <G
                      fill="#007ac9"
                    >
                      <Path
                        d="M11.6547059,0 L9.63529412,0 L8.27352941,5.25304918 L6.85647059,0 L4.75470588,0 C5.17529412,1.2387541 5.61411765,2.48577049 6.03470588,3.72688525 C6.67470588,5.59239344 7.07470588,6.99816393 7.25529412,7.95895082 L7.25529412,13.3772459 L9.25235294,13.3772459 L9.25235294,7.95895082 L11.6547059,0 Z M16.9917647,10.1496393 L16.9917647,6.65704918 C16.9917647,5.59239344 16.8094118,4.81396721 16.4317647,4.30878689 C15.9329412,3.62832787 15.2329412,3.28721311 14.3311765,3.28721311 C13.4347059,3.28721311 12.7323529,3.62832787 12.2347059,4.30878689 C11.8511765,4.81396721 11.6705882,5.59239344 11.6705882,6.65704918 L11.6705882,10.1496393 C11.6705882,11.2095738 11.8511765,11.9944918 12.2347059,12.4949508 C12.7323529,13.1742295 13.4347059,13.5153443 14.3311765,13.5153443 C15.2329412,13.5153443 15.9329412,13.1742295 16.4317647,12.4949508 C16.8094118,11.9944918 16.9917647,11.2095738 16.9917647,10.1496393 Z M15.19,10.4895738 C15.19,11.412 14.9117647,11.8735082 14.3311765,11.8735082 C13.75,11.8735082 13.4711765,11.412 13.4711765,10.4895738 L13.4711765,6.29527869 C13.4711765,5.37285246 13.75,4.91370492 14.3311765,4.91370492 C14.9117647,4.91370492 15.19,5.37285246 15.19,6.29527869 L15.19,10.4895738 Z M23.65,13.3772459 L23.65,3.40819672 L21.8494118,3.40819672 L21.8494118,11.0278033 C21.4494118,11.5937705 21.0711765,11.8735082 20.7117647,11.8735082 C20.4694118,11.8735082 20.3288235,11.7306885 20.29,11.4503607 C20.2676471,11.3919344 20.2676471,11.1712131 20.2676471,10.7474754 L20.2676471,3.40819672 L18.4723529,3.40819672 L18.4723529,11.2910164 C18.4723529,11.9944918 18.5335294,12.4719344 18.6329412,12.7735082 C18.8117647,13.2786885 19.2117647,13.5153443 19.7923529,13.5153443 C20.4488235,13.5153443 21.1317647,13.114623 21.8494118,12.2895738 L21.8494118,13.3772459 L23.65,13.3772459 L23.65,13.3772459 Z"
                      />
                      <Path
                        d="M29.4829412,25.4767869 C29.4829412,27.7825574 29.4811765,30.229377 28.9658824,32.4690492 C28.6058824,34.0412459 27.3235294,35.200918 25.7794118,35.3750164 C22.1235294,35.7845902 18.4223529,35.7869508 14.7394118,35.7845902 C11.0552941,35.7869508 7.35529412,35.7845902 3.69941176,35.3750164 C2.15529412,35.200918 0.872941176,34.0412459 0.513529412,32.4690492 C0,30.229377 0,27.7825574 0,25.4767869 C0,23.1680656 0.00529411765,20.7259672 0.519411765,18.4833443 C0.879411765,16.9117377 2.16117647,15.7514754 3.70529412,15.5785574 C7.36176471,15.1678033 11.0617647,15.1672131 14.7452941,15.1678033 C18.4282353,15.1672131 22.1294118,15.1678033 25.7852941,15.5785574 C27.33,15.7514754 28.6123529,16.9117377 28.9717647,18.4833443 C29.4847059,20.7259672 29.4829412,23.1680656 29.4829412,25.4767869"
                      />
                      <Path
                        d="M8.40941176,20.5005246 L8.40941176,18.6356066 L2.19647059,18.6356066 L2.19647059,20.5005246 L4.29294118,20.5005246 L4.29294118,31.8759344 L6.27411765,31.8759344 L6.27411765,20.5005246 L8.40941176,20.5005246 Z M12.0088235,31.8759344 L12.0088235,30.8006557 C11.3017647,31.615082 10.6288235,32.0122623 9.97352941,32.0122623 C9.39882353,32.0122623 9.00352941,31.7785574 8.82588235,31.2780984 C8.72764706,30.9782951 8.66823529,30.5085246 8.66823529,29.811541 L8.66823529,22.0101639 L10.4494118,22.0101639 L10.4494118,29.2739016 C10.4494118,29.6917377 10.4494118,29.9112787 10.4658824,29.9691148 C10.5094118,30.2459016 10.6441176,30.3863607 10.8823529,30.3863607 C11.24,30.3863607 11.6152941,30.1095738 12.0088235,29.5506885 L12.0088235,22.0101639 L13.7929412,22.0101639 L13.7929412,31.8759344 L12.0088235,31.8759344 Z M18.78,29.0567213 C18.78,29.9478689 18.5182353,30.3863607 18.0047059,30.3863607 C17.7117647,30.3863607 17.4141176,30.2459016 17.1164706,29.9478689 L17.1164706,23.9340984 C17.4141176,23.6401967 17.7117647,23.4991475 18.0047059,23.4991475 C18.5182353,23.4991475 18.78,23.9565246 18.78,24.8459016 L18.78,29.0567213 Z M20.5611765,28.9162623 L20.5611765,24.9863607 C20.5611765,24.0539016 20.5,23.4 20.3811765,23.0028197 C20.1435294,22.2645246 19.6676471,21.8903607 18.9570588,21.8903607 C18.3029412,21.8903607 17.6923529,22.2503607 17.1164706,22.9597377 L17.1164706,18.6356066 L15.3352941,18.6356066 L15.3352941,31.8759344 L17.1164706,31.8759344 L17.1164706,30.920459 C17.7117647,31.6587541 18.3229412,32.0122623 18.9570588,32.0122623 C19.6676471,32.0122623 20.1435294,31.6375082 20.3811765,30.9033443 C20.5,30.4860984 20.5611765,29.8280656 20.5611765,28.9162623 Z M25.5041176,25.7807213 L23.7235294,25.7807213 L23.7235294,24.868918 C23.7235294,23.9565246 24.0211765,23.4991475 24.6170588,23.4991475 C25.2058824,23.4991475 25.5041176,23.9565246 25.5041176,24.868918 L25.5041176,25.7807213 Z M27.2864706,28.7197377 L27.2864706,28.4594754 L25.4670588,28.4594754 C25.4670588,29.1765246 25.4458824,29.5713443 25.4294118,29.6687213 C25.3270588,30.1467541 25.0705882,30.3863607 24.6323529,30.3863607 C24.0211765,30.3863607 23.7235294,29.9313443 23.7235294,29.0177705 L23.7235294,27.2697049 L27.2864706,27.2697049 L27.2864706,25.2265574 C27.2864706,24.1713443 27.1070588,23.4 26.7341176,22.9019016 C26.2352941,22.2255738 25.5258824,21.8903607 24.6323529,21.8903607 C23.7235294,21.8903607 23.0123529,22.2255738 22.4988235,22.9019016 C22.1194118,23.4 21.9482353,24.1713443 21.9482353,25.2265574 L21.9482353,28.6825574 C21.9482353,29.728918 22.1423529,30.5085246 22.5205882,31.0007213 C23.0347059,31.6752787 23.7435294,32.0122623 24.6776471,32.0122623 C25.6076471,32.0122623 26.3382353,31.6587541 26.8323529,30.9428852 C27.0470588,30.6265574 27.1870588,30.2665574 27.2470588,29.8717377 C27.2641176,29.6917377 27.2864706,29.2945574 27.2864706,28.7197377 L27.2864706,28.7197377 Z"
                        fill="#FFFFFF"
                      />
                    </G>
                  </Svg>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderColor": "#ddd",
                    "borderStyle": "solid",
                    "borderTopWidth": 2,
                    "paddingVertical": 43.75,
                  },
                  undefined,
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Yhteystiedot
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Tietosuojalauseke
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Rekisteriseloste
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#007ac9",
                        "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                        "fontSize": 21,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Tietoa sivustosta
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#007ac9",
                      "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
                      "fontSize": 21,
                      "marginTop": 43.75,
                    },
                    undefined,
                  ],
                ]
              }
            >
              © Copyright HSL
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
